coloquei strong nos títulos

--- a/Formulario/pagep.html
+++ b/Formulario/pagep.html
@@ -18,24 +18,24 @@
     <fieldset class="grupo">
         
                 <div class="campo">
-                    <label for="name">👨‍💼👩‍💼Nome</label>
+                    <label for="name">👨‍💼👩‍💼<strong>Nome</strong></label>
                     <input type="text" name="nome" value="Escreva seu nome" id="nome">
                 </div>
 
                 <div class="campo">
-                    <label for="subname" > Sobrenome </label>
+                    <label for="subname" > <strong>Sobrenome</strong> </label>
                     <input type="text" name="sobrenome" value="Escreva o seu sobrenome" id="sobrenome" required>
                 </div>
     </fieldset>
 
     <div class="campo">
-        <label for="email">📧 Email</label>
+        <label for="email">📧 <strong>Email</strong></label>
         <input type="email" name="email" id="email" required>
 
     </div>
 
     <div class="campo">
-       <label for="teste">Qual dos doces a seguir você prefere?</label>
+       <label for="teste"><strong>Qual dos doces a seguir você prefere?</strong></label>
 
        <label for="">
            <input type="radio" name="doces" value="brigadeiro">brigadeiro
@@ -53,7 +53,7 @@
 
     <div class="campo">
 
-        <label for="pais">De qual pais voce é?</label>
+        <label for="pais"><strong>De qual pais voce é?</strong></label>
         <select name="pais" id="lugar">
             <option selected disabled value="">Selecione</option>
             <option value="BR">Brazil</option>
@@ -68,7 +68,7 @@
     <fieldset class="grupo">
         <div id="check">
 
-            <label for="tecnologias">Selecione das tecnologias a seguir as que você utiliza:</label><br><br>
+            <label for="tecnologias"><strong>Selecione das tecnologias a seguir as que você utiliza:</strong></label><br><br>
             <input type="checkbox" name="tec1" id="tec1">
             <label for="">HTML</label>
 
