--- a/javaexercicios/teste1.html
+++ b/javaexercicios/teste1.html
@@ -20,7 +20,7 @@
     </div>
          
     <div id="tela">
-        <img src="imagens/manha1.jpg" alt="">
+        <img src="imagens/manha2.png" alt="">
     </div>
 </section>
 
